--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Revalia&display=swap"
       rel="stylesheet"
     />
+    <script
+      async
+      src="node_modules/@material-tailwind/html/scripts/ripple.js"
+    ></script>
     <title>PWA Monster</title>
   </head>
   <body>
