--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       async
       src="node_modules/@material-tailwind/html/scripts/ripple.js"
     ></script>
-    <title>PWA Monster</title>
+    <title>MonsterPWA</title>
   </head>
   <body>
     <div id="root"></div>
